# forge

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  create_temp_textures.py  package-lock.json  resize_textures.sh  run-hot.sh
assets/textures/: TEXTURE_GUIDE.md
assets/worlds/Alpha/: planet.json
bevy_console_chat/: .cargo_vcs_info.json  Cargo.toml
bevy_console_chat/src/: console.rs  lib.rs
docs/: ARCHITECTURE.md  ROADMAP.md  TERRAIN_SCALING.md  hydrology_rework.md  world_builder_defaults.json
docs/decisions/: 001-rust-bevy-engine.md
docs/phases/: phase1-voxel-engine.md
src/: camera.rs  fog.rs  input.rs  interaction.rs  items.rs  lib.rs  loading.rs  main.rs  minimap.rs  particles.rs  tools.rs  ui.rs
src/block/: mod.rs  types.rs
src/celestial/: lighting.rs  mod.rs  sky.rs  sun.rs  time.rs
src/chunk/: data.rs  far.rs  manager.rs  mesh.rs  mod.rs
src/inventory/: hotbar.rs  mod.rs
src/physics/: collision.rs  mod.rs  player.rs
src/planet/: altitude_system.rs  celestial_data.rs  config.rs  coordinates.rs  mod.rs
src/render/: mod.rs
src/texture/: animation.rs  atlas.rs  loader.rs  mod.rs  test_textures.rs
src/ui/: command_prompt.rs  console_commands.rs  crosshair.rs  debug_overlay.rs  loading_screen.rs  minimap.rs  mod.rs
src/world/: biome.rs  chunk_store.rs  config.rs  defaults.rs  generator.rs  metadata.rs  mod.rs  noise_layers.rs  package.rs  persistence.rs
src/world/biomes/: climate.rs  mod.rs  types.rs
src/world/features/: caves.rs  mod.rs  ores.rs
src/world/generator/: continents.rs  hydrology.rs  lithology.rs  mod.rs  mountains.rs  (+2 more)
(+9 files in other folders)
