[package]
name = "forge"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A Minecraft-like MMO with planet-based realms"
default-run = "forge"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking", "file_watcher"] }
bevy_egui = "0.30"
noise = "0.9"
bytemuck = "1.16"
image = "0.24"
futures-lite = "2.0"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
